# ExQL

./: .gitignore  ExQL.cabal
app/: Main.hs
src/: ExQL.hs
